syntax = "proto3";

package transaction.events;
option java_multiple_files = true;

message BalanceUpdateEvent{
  string userId = 1;
  string transactionId = 2;
  string email = 3;
  int64 accountNumber = 4;
  double amount = 5;
  double balance = 6;
  string typeOfTransaction = 7;
  string status = 8;
}

message TransferEvent{
  string userId = 1;
  string transactionId = 2;
  string email = 3;
  int64 accountNumber = 4;
  int64 beneficiaryAccountNumber = 5;
  double amount = 6;
  double balance = 7;
  string status = 8;
}